# MWPC_v1

./: CMakeLists.txt  sim.cc
include/: ActionInitialization.hh  DetectorConstruction.hh  ElectricField.hh  EventAction.hh  Hit.hh  PhysicsList.hh  PrimaryGenerator.hh  SensitiveDetector.hh
macros/: vis.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGenerator.cc  SensitiveDetector.cc
